--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
+    "vite-plugin-pwa": "^1.1.0",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
     "xlsx": "^0.18.5"
