--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "axios": "^1.12.2",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "pinia": "^3.0.3",
     "vite-plugin-pwa": "^1.1.0",
     "vue": "^3.5.21",
